# recore

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
src/recore/: CMakeLists.txt
src/recore/core/: application.cpp  application.h  base.h  gui.h  renderer.h  utils.h  window.cpp  window.h
src/recore/passes/: pass.h
src/recore/passes/accumulator/: accumulator.comp.glsl  accumulator.cpp  accumulator.glslh  accumulator.h
src/recore/passes/blit/: blit.cpp  blit.frag.glsl  blit.h
src/recore/passes/debug/: distribution.cpp  distribution.frag.glsl  distribution.glsl  distribution.h  distribution.vert.glsl
src/recore/passes/diffuse_pathtracer/: diffuse_pathtracer.comp.glsl  diffuse_pathtracer.cpp  diffuse_pathtracer.glslh  diffuse_pathtracer.h
src/recore/passes/gbuffer/: gbuffer.cpp  gbuffer.frag.glsl  gbuffer.h  gbuffer.vert.glsl
src/recore/passes/gui/: gui.cpp  gui.h
src/recore/passes/guided_pathtracer/: guided_pathtracer.comp.glsl  guided_pathtracer.cpp  guided_pathtracer.glslh  guided_pathtracer.h  guiding.glslh  guiding_em.comp.glsl  guiding_indices.comp.glsl  shared.glslh
src/recore/passes/lpv/: inject_geometry.comp.glsl  inject_light.comp.glsl  lpv.cpp  lpv.glsl  lpv.glslh  lpv.h  propagation.comp.glsl
src/recore/passes/photontracer/: photontracer.comp.glsl  photontracer.cpp  photontracer.glslh  photontracer.h
src/recore/passes/pm_pathtracer/: pm_pathtracer.comp.glsl  pm_pathtracer.cpp  pm_pathtracer.glslh  pm_pathtracer.h
src/recore/passes/prefixsum/: prefixsum.comp.glsl  prefixsum.cpp  prefixsum.glslh  prefixsum.h  prefixsum_add.comp.glsl
src/recore/passes/rsm/: rsm.cpp  rsm.frag.glsl  rsm.glslh  rsm.h  rsm.vert.glsl
src/recore/passes/svgf/: atrous.comp.glsl  atrous.glslh  finalize.comp.glsl  reprojection.comp.glsl  svgf.cpp  svgf.h
src/recore/passes/taa/: taa.comp.glsl  taa.cpp  taa.h  (+1 more)
src/recore/scene/: camera.cpp  camera.h  ecs.cpp  ecs.h  ecs_components.h  gpu_scene.cpp  gpu_scene.h  lights.glsl  ray_tracing.glsl  scene.cpp  scene.glsl  scene.glslh  scene.h  shading.glsl
src/recore/shaders/: atomic.glsl  bda.glsl  constants.glsl  debug_print.glsl  fullscreen.vert.glsl  hashgrid.glsl  hashgrid.glslh  math.glsl  photon_mapping.glsl  photon_mapping.glslh  random.glsl  shared.glslh  visual_debug.glsl  vmm.glsl  vmm.glslh
src/recore/vulkan/: CMakeLists.txt  context.cpp  context.h  debug.h  debug_messenger.cpp  debug_messenger.h  shader_library.cpp  shader_library.h  utils.h
(+46 files in other folders)
